workloads/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:v1.5.6-ls346
          ports:
            - containerPort: 6767
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: storage
              mountPath: /storage
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: storage
          persistentVolumeClaim:
            claimName: bazarr-media
