workloads/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  type: ClusterIP
  selector:
    app: bazarr
  ports:
    - port: 6767
      targetPort: http
      protocol: TCP
      name: http
