workloads/bazarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
spec:
  entryPoints:
    - websecure-internal
  routes:
    - match: Host(`bazarr.home.drewdevlab.com`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
  tls: {}
